@@ -1,1 +1,1 @@
-ripl >=0.2.0
+ripl >=0.3.0
