@@ -1,5 +1,6 @@
 == 0.2.3
-* Allow procs as multi_line_prompt
+* fix 0.2.2 bugs
+* allow procs as multi_line_prompt (and different default value)
 
 == 0.2.2
 * fix for mri regexes
